# MacqueenDE

./: .gitignore  README.md  start-macqueende
apps/macqueen-screenshot/: CMakeLists.txt
apps/macqueen-screenshot/desktop/: org.kde.spectacle.desktop.cmake
apps/macqueen-screenshot/src/: CMakeLists.txt  Main.cpp
compositor/: .kde-ci.yml  CMakeLists.txt  KWinDBusInterfaceConfig.cmake.in
compositor/autotests/integration/: x11keyread.cpp  (+1 more)
compositor/src/: CMakeLists.txt  config-kwin.h.cmake  keyboard_layout.h  macqueenipc.cpp  macqueenipc.h  main.cpp  main_wayland.cpp  workspace.cpp
desktop/: org.kde.spectacle.appdata.xml
docs/: ARCHITECTURE.md  BUILDING.md  PLASMA_INTEGRATION.md  UPSTREAM.md
installer/: README.md
ipc/: README.md
packaging/arch/: README.md
po/cs/: spectacle.po
po/fr/: spectacle.po
portal/src/: CMakeLists.txt  desktopportal.cpp  macqueenscreenchooserbridge.cpp  macqueenscreenchooserbridge.h  outputsmodel.cpp  outputsmodel.h  screencast.cpp  screenchooserdialog.cpp  screenchooserdialog.h
quickshell/macqueen-module/: CMakeLists.txt  README.md  macqueenipcclient.cpp  macqueenipcclient.h
quickshell/macqueen-module/tests/: smoke.qml
scripts/: smoke-ipc.sh  smoke-quickshell.sh  smoke-virtual.sh  smoke-window-ipc.sh
session/: README.md  install-dev-session.sh  macqueende-portals.conf  macqueende.desktop  org.freedesktop.impl.portal.desktop.kde.desktop.in  run-molniya  uninstall-dev-session.sh
shell/MolniyaMacqueenShell/: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.MD  CONTRIBUTING.md  Makefile  README.md  flake.nix
(+578 files in other folders)
